--- a/css/styles.css
+++ b/css/styles.css
@@ -619,11 +619,11 @@ body {
 .flex-foot {
   display: flex;
   align-items: baseline;
-  gap: 120px;
 }
 
 .foot-indent {
   display: block;
+  margin-right: 120px;
 }
 
 .foot-text {
@@ -637,6 +637,7 @@ body {
 
 .soc {
   display: block;
+  margin-right: 80px;
 }
 
 .social-title {
@@ -668,6 +669,70 @@ body {
 .footer-link:hover,
 .footer-link:focus {
   background-color: var(--footlinkfocuscolor);
+}
+
+.form-foot-block {
+  display: block;
+  width: 453px;
+  height: 80px;
+}
+
+.form-footer-title {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-input {
+  width: 264px;
+  min-height: 40px;
+  padding: 8px 16px;
+  background: #2e2f42;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  margin-right: 24px;
+  letter-spacing: 0.04em;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  color: #ffffff;
+  outline: transparent;
+}
+
+.footer-btn {
+  font-weight: 500;
+  display: flex;
+  line-height: 1.5;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 8px 24px;
+  letter-spacing: 0.04em;
+  background: #4d5ae5;
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 8px 24px;
+  border: none;
+  cursor: pointer;
+  gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: var(--activebackbtncolor);
+}
+
+.icon-fly {
+  display: block;
+  fill: #ffffff;
 }
 
 /* Модальне вікно */
@@ -702,6 +767,7 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding-bottom: 24px;
 }
 
 .modal-icon {
@@ -724,5 +790,133 @@ body {
 .modal-icon:hover,
 .modal-icon:focus {
   fill: var(--backgroundcolor);
+  background-color: var(--activebackbtncolor);
+}
+
+.modal-title {
+  font-weight: 500;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  justify-content: center;
+  padding-top: 72px;
+  margin-bottom: 16px;
+}
+
+.modal-form {
+  width: 360px;
+  margin: 0 auto;
+}
+
+.modal-title-decor {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+
+.input-modal-icon {
+  position: relative;
+  display: block;
+}
+
+.modal-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding-top: 11px;
+  padding-left: 38px;
+  padding-bottom: 11px;
+  margin-bottom: 8px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.modal-input:hover + .input-icon,
+.modal-input:focus + .input-icon {
+  fill: #4d5ae5;
+}
+
+.input-icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 16px;
+  align-items: center;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-area {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  margin-bottom: 16px;
+  outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-area:hover,
+.input-area:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.modal-check {
+  align-items: baseline;
+  display: flex;
+  gap: 8px;
+}
+
+.privacy-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 24px;
+}
+
+.modal-btn {
+  display: block;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
   background-color: var(--activebackbtncolor);
 }
