--- a/css/styles.css
+++ b/css/styles.css
@@ -838,14 +838,12 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover,
 .modal-input:focus {
-  border: 1px solid #4d5ae5;
+  border: 1px solid var(--logowebcolor);
 }
 
-.modal-input:hover + .input-icon,
 .modal-input:focus + .input-icon {
-  fill: #4d5ae5;
+  fill: var(--logowebcolor);
 }
 
 .input-icon {
@@ -874,24 +872,38 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-area:hover,
 .input-area:focus {
-  border: 1px solid #4d5ae5;
+  border: 1px solid var(--logowebcolor);
 }
 
-.modal-check {
-  align-items: baseline;
+/*Privacy Policy*/
+
+.form-check-desc {
   display: flex;
-  gap: 8px;
-}
-
-.privacy-text {
   font-weight: 400;
   font-size: 12px;
+  align-items: center;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 24px;
+}
+
+.form-check-desc::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+  background-image: url(../images/clickoff.svg);
+  background-position: center;
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-check:checked + .form-check-desc::before {
+  background-image: url(../images/clickon.svg);
 }
 
 .modal-btn {
@@ -899,7 +911,7 @@ body {
   padding: 16px 32px;
   width: 169px;
   height: 56px;
-  background-color: #4d5ae5;
+  background-color: var(--logowebcolor);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-weight: 500;
   font-size: 16px;
