--- a/css/styles.css
+++ b/css/styles.css
@@ -885,7 +885,7 @@ body {
   align-items: center;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #8e8f99;
+  color: var(--clienticonfill);
   margin-bottom: 24px;
 }
 
