--- a/css/styles.css
+++ b/css/styles.css
@@ -635,11 +635,6 @@ body {
   width: 264px;
 }
 
-.soc {
-  display: block;
-  margin-right: 80px;
-}
-
 .social-title {
   font-weight: 500;
   font-size: 16px;
@@ -671,18 +666,16 @@ body {
   background-color: var(--footlinkfocuscolor);
 }
 
-.form-foot-block {
-  display: block;
-  width: 453px;
-  height: 80px;
-}
-
 .form-footer-title {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+}
+
+.form-foot-block {
+  margin-left: auto;
 }
 
 .footer-form {
@@ -748,8 +741,8 @@ input[type="email"]::placeholder {
   opacity: 1;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: var(--modal);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -766,14 +759,19 @@ input[type="email"]::placeholder {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 408px;
-  min-height: 576px;
+
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding-bottom: 24px;
+  padding: 72px 24px 24px;
+}
+
+.input-icons {
+  display: block;
+  margin-bottom: 8px;
 }
 
 .modal-icon {
@@ -804,15 +802,8 @@ input[type="email"]::placeholder {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-  justify-content: center;
-  padding-top: 72px;
+  color: var(--textcolor);
   margin-bottom: 16px;
-}
-
-.modal-form {
-  width: 360px;
-  margin: 0 auto;
 }
 
 .modal-title-decor {
@@ -837,7 +828,7 @@ input[type="email"]::placeholder {
   padding-top: 11px;
   padding-left: 38px;
   padding-bottom: 11px;
-  margin-bottom: 8px;
+
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   outline: transparent;
@@ -862,6 +853,11 @@ input[type="email"]::placeholder {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.area-block {
+  display: block;
+  margin-bottom: 16px;
+}
+
 .input-area {
   width: 100%;
   height: 120px;
@@ -873,7 +869,7 @@ input[type="email"]::placeholder {
   letter-spacing: 0.04em;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  margin-bottom: 16px;
+
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -912,6 +908,10 @@ input[type="email"]::placeholder {
   background-image: url(../images/clickon.svg);
 }
 
+.privacy-color {
+  color: var(--logowebcolor);
+}
+
 .modal-btn {
   display: block;
   padding: 16px 32px;
@@ -922,8 +922,6 @@ input[type="email"]::placeholder {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
   border: none;
